<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/logoTagLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/sweet" />

        <TextView
            android:id="@+id/brandTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/country_western"
            android:gravity="center_horizontal"
            android:text="@string/tagline"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorMain"
            android:textStyle="bold|italic" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoTagLinear"
        android:gravity="center"
        android:layout_alignBottom="@id/socialLinear"
        android:orientation="vertical">
<!--        android:layout_marginTop="180dp"-->

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorMain"
            android:textSize="18sp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorMain"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/socialLinear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorMain"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnInstagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/btn_instagram"
            android:padding="10dp"
            android:src="@drawable/ic_instagram"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btnFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/btn_facebook"
            android:padding="10dp"
            android:src="@drawable/ic_facebook"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btnTwitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/btn_twitter"
            android:padding="10dp"
            android:src="@drawable/ic_twitter"
            app:tint="@color/white" />


    </LinearLayout>


</RelativeLayout>